#3 : UI is available for Tax rates but update for existing tax rates must still be implemented